--- a/olympics.html
+++ b/olympics.html
@@ -7,7 +7,154 @@
 <title>Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV</title>
 <meta content="Free PPV ufc, TV, NBA, NFL, and F1 streams" name="description"/>
 <meta content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, for, stream, online, free, mrgamingstreams, f1, tv, nfl" name="keywords"/>
+<link href="https://fonts.goo<!DOCTYPE html>
+
+<html data-bs-theme="dark" lang="en">
+<head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<title>Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV</title>
+<meta content="Free PPV ufc, TV, NBA, NFL, and F1 streams" name="description"/>
+<meta content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, for, stream, online, free, mrgamingstreams, f1, tv, nfl" name="keywords"/>
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
+<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+<link href="css/main.css" rel="stylesheet" type="text/css"/>
+<link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
+<style>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EQ3BHVQGMN');
+</script>
+    <style>
+        .navbar-brand {
+            color: pink;
+            font-size: 1.3rem;
+            text-decoration: none;
+            margin-top: -3px;
+            font-family: 'Kanit', sans-serif;
+            font-weight: bold;
+        }
+        .navbar-brand:hover {
+            text-decoration: underline;
+        }
+        .navbar-nav {
+            margin-left: 0;
+        }
+        .navbar-nav .nav-link {
+            padding-left: 5px;
+            padding-right: 5px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        table, th, td {
+            border: 1px solid white;
+        }
+        th, td {
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            cursor: default;
+        }
+        .countdown-timer {
+            font-weight: bold;
+            color: #ff0000;
+        }
+        h2 {
+            color: pink;
+        }
+    </style>
+</head>
+<body>
+<nav class="navbar navbar-expand-lg bg-black">
+<div class="container-fluid">
+<a class="navbar-brand" href="https://roxiestreams.info/">RoxieStreams</a>
+<button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
+<span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/soccer">Soccer</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/mlb">MLB</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/nba">NBA</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/nfl">NFL</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/nhl">NHL</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/fighting">Fighting</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.info/motorsports">Motorsports</a></li>
+<li class="nav-item"><a class="nav-link" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
+</ul>
+</div>
+</div>
+</nav>
+<div class="container container-fluid pt-2 text-white">
+<div class="mt-5">
+<h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">Upcoming Olympic Events</h2>
+<table id="eventsTable">
+<thead>
+<tr>
+<th>Event</th>
+<th>Start Time</th>
+<th>Countdown</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Cross Country Skiing : Men's 10km and 10km Skiathlon</a></td>
+<td>February 8, 2026 15:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 8, 2026 15:00:00"></span></td>
+</tr>
+<tr>
+</tbody>
+</table>
+</div>
+</div>
+<footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
+<ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
+<li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
+</ul>
+<p class="mb-0 text-body-secondary text-center text-lg-start">Roxiestreams © 2024</p>
+</footer>
+<script src="js/bootstrap.bundle.min.js"></script>
+<script>
+        function startCountdown() {
+            var countdownElements = document.querySelectorAll('.countdown-timer');
+
+            countdownElements.forEach(function(element) {
+                var startTime = new Date(element.getAttribute('data-start')).getTime();
+                var endTime = new Date(element.getAttribute('data-end')).getTime();
+
+                setInterval(function() {
+                    var now = new Date().getTime();
+                    var timeRemaining = startTime - now;
+
+                    if (now > endTime) {
+                        element.parentElement.parentElement.remove();
+                    } else {
+                        var hours = Math.floor((timeRemaining % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                        var minutes = Math.floor((timeRemaining % (1000 * 60 * 60)) / (1000 * 60));
+                        var seconds = Math.floor((timeRemaining % (1000 * 60)) / 1000);
+
+                        if (timeRemaining <= 0) {
+                            element.innerHTML = "Event Started!";
+                        } else {
+                            element.innerHTML = (hours < 10 ? "0" + hours : hours) + ":" + (minutes < 10 ? "0" + minutes : minutes) + ":" + (seconds < 10 ? "0" + seconds : seconds);
+                        }
+                    }
+                }, 1000);
+            });
+        }
+
+        window.onload = startCountdown;
+    </script>
+</body>
+</html>gleapis.com" rel="preconnect"/>
 <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 <link href="css/main.css" rel="stylesheet" type="text/css"/>
