--- a/olympics.html
+++ b/olympics.html
@@ -111,6 +111,256 @@
 <td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 8, 2026 15:00:00"></span></td>
 </tr>
 <tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Buongiorno Milano : Day 3 (TNT 2)</a></td>
+<td>February 09, 2026 12:00 AM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 12:00:00 AM" data-start="February 09, 2026 12:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Alpine Skiing : Men's Team Combined Downhill (TNT 2)</a></td>
+<td>February 09, 2026 01:00 AM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 01:00:00 AM" data-start="February 09, 2026 01:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Curling : Mixed Doubles Round Robin: Italy v United States (TNT 4)</a></td>
+<td>February 09, 2026 01:00 AM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 01:00:00 AM" data-start="February 09, 2026 01:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Alpine Skiing : Men's Team Combined Downhill (TNT 2)</a></td>
+<td>February 09, 2026 01:15 AM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 01:15:00 AM" data-start="February 09, 2026 01:15:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Ice Hockey : Women's Group B: Japan v Italy (TNT 4)</a></td>
+<td>February 09, 2026 03:00 AM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 03:00:00 AM" data-start="February 09, 2026 03:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Freestyle Skiing : Women's Slopestyle Final (TNT 2)</a></td>
+<td>February 09, 2026 03:15 AM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 03:15:00 AM" data-start="February 09, 2026 03:15:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Alpine Skiing : Men's Team Combined Slalom (TNT 4)</a></td>
+<td>February 09, 2026 04:30 AM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 04:30:00 AM" data-start="February 09, 2026 04:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Alpine Skiing : Men's Team Combined Slalom (TNT 2)</a></td>
+<td>February 09, 2026 05:15 AM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 05:15:00 AM" data-start="February 09, 2026 05:15:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">: Day 3 (TNT 2)</a></td>
+<td>February 09, 2026 06:30 AM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 06:30:00 AM" data-start="February 09, 2026 06:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Ice Hockey : Women's Group B: Germany v France (TNT 4)</a></td>
+<td>February 09, 2026 07:30 AM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 07:30:00 AM" data-start="February 09, 2026 07:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Luge : Women's Singles: 1st Run (TNT 2)</a></td>
+<td>February 09, 2026 08:00 AM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 08:00:00 AM" data-start="February 09, 2026 08:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Speed Skating : Women's 1000m (TNT 4)</a></td>
+<td>February 09, 2026 08:15 AM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 08:15:00 AM" data-start="February 09, 2026 08:15:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">: Day 3 (TNT 2)</a></td>
+<td>February 09, 2026 08:45 AM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 08:45:00 AM" data-start="February 09, 2026 08:45:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Curling : Mixed Doubles Semi-Final: TBA v TBA (TNT 2)</a></td>
+<td>February 09, 2026 08:45 AM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 08:45:00 AM" data-start="February 09, 2026 08:45:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Luge : Women's Singles: 2nd Run (TNT 2)</a></td>
+<td>February 09, 2026 09:30 AM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 09:30:00 AM" data-start="February 09, 2026 09:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Ski Jumping : Men's HS109 (TNT 4)</a></td>
+<td>February 09, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 10:00:00 AM" data-start="February 09, 2026 10:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Snowboarding : Women's Big Air Final (TNT 2)</a></td>
+<td>February 09, 2026 10:15 AM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 10:15:00 AM" data-start="February 09, 2026 10:15:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Figure Skating : Ice Dance: Rhythm Dance (TNT 2)</a></td>
+<td>February 09, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 11:45:00 AM" data-start="February 09, 2026 11:45:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Ice Hockey : Women's Group A: Switzerland v United States (TNT 4)</a></td>
+<td>February 09, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 12:00:00 PM" data-start="February 09, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Ciao Cortina : Day 3 (TNT 2)</a></td>
+<td>February 09, 2026 02:30 PM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 02:30:00 PM" data-start="February 09, 2026 02:30:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">The Gruppetto (TNT 4)</a></td>
+<td>February 09, 2026 02:45 PM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 02:45:00 PM" data-start="February 09, 2026 02:45:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Freestyle Skiing : Women's Slopestyle Final (TNT 2)</a></td>
+<td>February 09, 2026 03:00 PM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 03:00:00 PM" data-start="February 09, 2026 03:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Snowboarding : Women's Big Air Final (TNT 2)</a></td>
+<td>February 09, 2026 04:00 PM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 04:00:00 PM" data-start="February 09, 2026 04:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Figure Skating : Ice Dance: Rhythm Dance (TNT 2)</a></td>
+<td>February 09, 2026 05:00 PM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 05:00:00 PM" data-start="February 09, 2026 05:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Snowboarding : Women's Big Air Final (TNT 2)</a></td>
+<td>February 09, 2026 07:30 PM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 07:30:00 PM" data-start="February 09, 2026 07:30:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Figure Skating : Ice Dance: Rhythm Dance (TNT 2)</a></td>
+<td>February 09, 2026 08:30 PM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 08:30:00 PM" data-start="February 09, 2026 08:30:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Snowboarding : Women's Big Air Final (TNT 2)</a></td>
+<td>February 09, 2026 10:00 PM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 10:00:00 PM" data-start="February 09, 2026 10:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Buongiorno Milano : Day 4 (TNT 2)</a></td>
+<td>February 10, 2026 12:00 AM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 12:00:00 AM" data-start="February 10, 2026 12:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Cross Country Skiing : Classic Sprint Qualification (TNT 4)</a></td>
+<td>February 10, 2026 12:00 AM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 12:00:00 AM" data-start="February 10, 2026 12:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Alpine Skiing : Women's Team Combined Downhill (TNT 2)</a></td>
+<td>February 10, 2026 01:00 AM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 01:00:00 AM" data-start="February 10, 2026 01:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Cross Country Skiing : Classic Sprint (TNT 4)</a></td>
+<td>February 10, 2026 02:15 AM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 02:15:00 AM" data-start="February 10, 2026 02:15:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Freestyle Skiing : Men's Slopestyle Final (TNT 2)</a></td>
+<td>February 10, 2026 03:15 AM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 03:15:00 AM" data-start="February 10, 2026 03:15:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Curling : Mixed Doubles Bronze Medal Game: TBA v TBA (TNT 4)</a></td>
+<td>February 10, 2026 04:45 AM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 04:45:00 AM" data-start="February 10, 2026 04:45:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Alpine Skiing : Women's Team Combined Slalom (TNT 2)</a></td>
+<td>February 10, 2026 05:15 AM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 05:15:00 AM" data-start="February 10, 2026 05:15:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Curling : Mixed Doubles Bronze Medal Game: TBA v TBA (TNT 2)</a></td>
+<td>February 10, 2026 06:15 AM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 06:15:00 AM" data-start="February 10, 2026 06:15:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">: Day 4 (TNT 2)</a></td>
+<td>February 10, 2026 07:15 AM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 07:15:00 AM" data-start="February 10, 2026 07:15:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Ice Hockey : Women's Group B: Italy v Germany (TNT 4)</a></td>
+<td>February 10, 2026 07:30 AM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 07:30:00 AM" data-start="February 10, 2026 07:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Curling : Mixed Doubles Gold Medal Game: TBA v TBA (TNT 2)</a></td>
+<td>February 10, 2026 08:45 AM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 08:45:00 AM" data-start="February 10, 2026 08:45:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Luge : Women's Singles: 4th Run (TNT 4)</a></td>
+<td>February 10, 2026 09:30 AM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 09:30:00 AM" data-start="February 10, 2026 09:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Premier League : Chelsea v Leeds United (TNT 4)</a></td>
+<td>February 10, 2026 11:00 AM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 11:00:00 AM" data-start="February 10, 2026 11:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Figure Skating : Men's Short Program (TNT 2)</a></td>
+<td>February 10, 2026 11:15 AM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 11:15:00 AM" data-start="February 10, 2026 11:15:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Ciao Cortina : Day 4 (TNT 2)</a></td>
+<td>February 10, 2026 02:30 PM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 02:30:00 PM" data-start="February 10, 2026 02:30:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Alpine Skiing : Women's Team Combined Downhill (TNT 2)</a></td>
+<td>February 10, 2026 03:00 PM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 03:00:00 PM" data-start="February 10, 2026 03:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Serie A Football (TNT 4)</a></td>
+<td>February 10, 2026 03:00 PM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 03:00:00 PM" data-start="February 10, 2026 03:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Alpine Skiing : Women's Team Combined Slalom (TNT 2)</a></td>
+<td>February 10, 2026 03:30 PM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 03:30:00 PM" data-start="February 10, 2026 03:30:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Freestyle Skiing : Men's Slopestyle Final (TNT 2)</a></td>
+<td>February 10, 2026 04:00 PM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 04:00:00 PM" data-start="February 10, 2026 04:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Curling : Mixed Doubles Gold Medal Game (TNT 2)</a></td>
+<td>February 10, 2026 05:01 PM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 05:01:00 PM" data-start="February 10, 2026 05:01:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Freestyle Skiing : Men's Slopestyle Final (TNT 2)</a></td>
+<td>February 10, 2026 07:30 PM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 07:30:00 PM" data-start="February 10, 2026 07:30:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Curling : Mixed Doubles Gold Medal Game (TNT 2)</a></td>
+<td>February 10, 2026 08:30 PM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 08:30:00 PM" data-start="February 10, 2026 08:30:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Freestyle Skiing : Men's Slopestyle Final (TNT 2)</a></td>
+<td>February 10, 2026 11:01 PM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 11:01:00 PM" data-start="February 10, 2026 11:01:00 PM"></span></td>
+</tr>
 </tbody>
 </table>
 </div>
