--- a/olympics-1.html
+++ b/olympics-1.html
@@ -102,7 +102,7 @@
             <div id="playerContainer"></div>
             <div class="streamchanger">
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.xn--1000-ugoa0hsb9a0hb.com/olympics.m3u8')">TNT 2</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.xn--1000-ugoa0hsb9a0hb.com/bbc.m3u8')">BBC TWO</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.xn--1000-ugoa0hsb9a0hb.com/tnt4.m3u8')">TNT 4</button>
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://601.xn--1000-ugoa0hsb9a0hb.com/usaa.m3u8')">USA Network</button>
             </div>
             <div class="embedchat">
