--- a/olympics.html
+++ b/olympics.html
@@ -152,7 +152,7 @@
 <td><span class="countdown-timer" data-end="February 10, 2026 05:15:00 AM" data-start="February 09, 2026 05:15:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">: Day 3 (TNT 2)</a></td>
+<td><a href="https://roxiestreams.info/olympics-1">Day 3 (TNT 2)</a></td>
 <td>February 09, 2026 06:30 AM</td>
 <td><span class="countdown-timer" data-end="February 10, 2026 06:30:00 AM" data-start="February 09, 2026 06:30:00 AM"></span></td>
 </tr>
@@ -172,7 +172,7 @@
 <td><span class="countdown-timer" data-end="February 10, 2026 08:15:00 AM" data-start="February 09, 2026 08:15:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">: Day 3 (TNT 2)</a></td>
+<td><a href="https://roxiestreams.info/olympics-1">Day 3 (TNT 2)</a></td>
 <td>February 09, 2026 08:45 AM</td>
 <td><span class="countdown-timer" data-end="February 10, 2026 08:45:00 AM" data-start="February 09, 2026 08:45:00 AM"></span></td>
 </tr>
@@ -180,6 +180,11 @@
 <td><a href="https://roxiestreams.info/olympics-1">Curling : Mixed Doubles Semi-Final: TBA v TBA (TNT 2)</a></td>
 <td>February 09, 2026 08:45 AM</td>
 <td><span class="countdown-timer" data-end="February 10, 2026 08:45:00 AM" data-start="February 09, 2026 08:45:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Speed Skating: Women's 1000m (NBC)</a></td>
+<td>February 09, 2026 09:00 AM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 09:00:00 AM" data-start="February 09, 2026 09:00:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/olympics-1">Luge : Women's Singles: 2nd Run (TNT 2)</a></td>
@@ -195,6 +200,15 @@
 <td><a href="https://roxiestreams.info/olympics-1">Snowboarding : Women's Big Air Final (TNT 2)</a></td>
 <td>February 09, 2026 10:15 AM</td>
 <td><span class="countdown-timer" data-end="February 10, 2026 10:15:00 AM" data-start="February 09, 2026 10:15:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Women's Snowboard Big Air Final (NBC)</a></td>
+<td>February 09, 2026 10:30 AM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 10:30:00 AM" data-start="February 09, 2026 10:30:00 AM"></span></td>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Figure Skating: Rhythm Dance, Part 2 (NBC)</a></td>
+<td>February 09, 2026 11:40 AM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 11:40:00 AM" data-start="February 09, 2026 11:40:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/olympics-1">Figure Skating : Ice Dance: Rhythm Dance (TNT 2)</a></td>
@@ -232,6 +246,11 @@
 <td><span class="countdown-timer" data-end="February 10, 2026 05:00:00 PM" data-start="February 09, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
+<td><a href="https://roxiestreams.info/olympics-1">Primetime in Milan: The Olympics : Figure Skating, Freestyle Skiing, Alpine Skiing: Primetime in Milan (NBC)</a></td>
+<td>February 09, 2026 05:00 PM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 05:00:00 PM" data-start="February 09, 2026 05:00:00 PM"></span></td>
+</tr>
+<tr>
 <td><a href="https://roxiestreams.info/olympics-1">Snowboarding : Women's Big Air Final (TNT 2)</a></td>
 <td>February 09, 2026 07:30 PM</td>
 <td><span class="countdown-timer" data-end="February 10, 2026 07:30:00 PM" data-start="February 09, 2026 07:30:00 PM"></span></td>
@@ -240,6 +259,11 @@
 <td><a href="https://roxiestreams.info/olympics-1">Figure Skating : Ice Dance: Rhythm Dance (TNT 2)</a></td>
 <td>February 09, 2026 08:30 PM</td>
 <td><span class="countdown-timer" data-end="February 10, 2026 08:30:00 PM" data-start="February 09, 2026 08:30:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Olympic Late Night: Snowboarding, Speed Skating (NBC)</a></td>
+<td>February 09, 2026 08:35 PM</td>
+<td><span class="countdown-timer" data-end="February 10, 2026 08:35:00 PM" data-start="February 09, 2026 08:35:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/olympics-1">Snowboarding : Women's Big Air Final (TNT 2)</a></td>
@@ -287,7 +311,7 @@
 <td><span class="countdown-timer" data-end="February 11, 2026 06:15:00 AM" data-start="February 10, 2026 06:15:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/olympics-1">: Day 4 (TNT 2)</a></td>
+<td><a href="https://roxiestreams.info/olympics-1">Day 4 (TNT 2)</a></td>
 <td>February 10, 2026 07:15 AM</td>
 <td><span class="countdown-timer" data-end="February 11, 2026 07:15:00 AM" data-start="February 10, 2026 07:15:00 AM"></span></td>
 </tr>
@@ -305,6 +329,16 @@
 <td><a href="https://roxiestreams.info/olympics-1">Luge : Women's Singles: 4th Run (TNT 4)</a></td>
 <td>February 10, 2026 09:30 AM</td>
 <td><span class="countdown-timer" data-end="February 11, 2026 09:30:00 AM" data-start="February 10, 2026 09:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Women's Singles Luge, Final Run (NBC)</a></td>
+<td>February 10, 2026 09:45 AM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 09:45:00 AM" data-start="February 10, 2026 09:45:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/olympics-1">Figure Skating: Men's Short, Part 2 (NBC)</a></td>
+<td>February 10, 2026 10:45 AM</td>
+<td><span class="countdown-timer" data-end="February 11, 2026 10:45:00 AM" data-start="February 10, 2026 10:45:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/olympics-1">Premier League : Chelsea v Leeds United (TNT 4)</a></td>
